modify gongzi select value change to pingjie strng

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -151,8 +151,9 @@
 			QueryString.Initial();
 			
 			function GetUserInfo(CODE){
-				//window.localStorage.setItem('role',0)
-				// window.localStorage.setItem('userid','2c91188d6459ccb901645d9c341a000d')
+//				window.localStorage.setItem('role',0)
+//				window.localStorage.setItem('userid','2c91188d6459ccb901645d9c341a000d')
+//				ToDepartment()
 				mui.get(Url + 'getOpen_id',{code:CODE,yxName:'工序'},function(res){
 					switch(res.code){
 						case 0:
