change kaigong quanxian

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -151,8 +151,10 @@
 			QueryString.Initial();
 			
 			function GetUserInfo(CODE){
+				//alert(CODE)
 //				window.localStorage.setItem('role',0)
 //				window.localStorage.setItem('userid','2c91188d6459ccb901645d9c341a000d')
+//				window.localStorage.setItem('userid','2c91188d646e1e7e01646e7a95d0001d CS666')					
 //				ToDepartment()
 				mui.get(Url + 'getOpen_id',{code:CODE,yxName:'工序'},function(res){
 					switch(res.code){
@@ -161,6 +163,7 @@
 							window.localStorage.setItem('role',res.user.isManager)
 							window.localStorage.setItem('userid',res.user.ID)
 							window.localStorage.setItem('khtype',res.user.khtype)
+							window.localStorage.setItem('kaigong',res.user.kaigong)
 							window.localStorage.setItem('username',res.user.username)
 							if (res.user.khtype == 1) {
 								window.localStorage.setItem('departmentId','kehu');
